--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ header {
     align-items: center;
     padding: 20px;
     background-color: #000;
+    z-index: 2;
 }
 
 .container-logo img {
@@ -242,7 +243,6 @@ nav {
 			rgba(0,0,0,0.5)
 		)
 	,url(files/images/pregnant-woman-having-business-meeting.jpg);
-	width: 100%;
 	height: 100vh;
 	background-size: cover;
   	background-repeat:no-repeat;
@@ -371,6 +371,11 @@ button{
 button:hover{
 	background-color: rgb(101, 33, 165);
     color: white;
+}
+
+.arrow-up{
+    opacity: 0;
+    visibility: hidden;
 }
 
 
@@ -522,7 +527,6 @@ button:hover{
 
 /* Sección Contacto */
 #contacto {
-    padding: 50px 20px;
     text-align: center;
     background: #f0f0f0;
 }
@@ -1269,6 +1273,15 @@ input.whats-input[type=text]:focus {
         text-align: center;
     }
 
+    .hero .container .container-col{
+        padding: 20px 0;
+        margin-top: 30px;
+    }
+
+    .hero .container .container-col h2{
+        padding: 1rem 0.5rem;
+    }
+
     .quienes-somos{
         width: 100%;
         display: flex;
@@ -1277,7 +1290,9 @@ input.whats-input[type=text]:focus {
     }
 
     .contenido{
+        width: 80%;
         padding-right: 0px;
+        padding-top: 30px;
     }
 
     /* Barra de desplazamiento personalizada para vista vertical */
@@ -1296,8 +1311,18 @@ input.whats-input[type=text]:focus {
         padding: 40px 0;
     }
 
+    .quienes-somos{
+        padding: 0;
+        margin: 0;
+    }
+
     #read-more {
-        max-height: 270px;
+        max-height: 150px;
+    }
+
+    /*Sección contacto*/
+    form#contact-form {
+        max-width: 400px;
     }
 }
 
@@ -1305,6 +1330,10 @@ input.whats-input[type=text]:focus {
 @media only screen and (max-width: 780px) and (orientation: landscape) {
     .hero{
         height: 700px;
+    }
+
+    .hero .container .container-col h2{
+        font-size: 35px;
     }
 
     .navbar nav ul {
