--- a/styles.css
+++ b/styles.css
@@ -526,17 +526,123 @@ button:hover{
 }
 
 /* Sección Contacto */
-#contacto {
-    text-align: center;
-    background: #f0f0f0;
+.section-form{
+    background-image: linear-gradient(
+			0deg,
+			rgba(0,0,0,0.5),
+			rgba(0,0,0,0.5)
+		)
+	,url(files/images/pregnant-woman-having-business-meeting.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    transition: 0.5s ease all;
 }
 
-form#contact-form {
+.form{
+	background: #000000d0;
+	margin: 50px 0;
+	padding: 12px 15px;
+    display: block;
+    transition: 0.5s ease all;
+    border-radius: 20px;
+    left: 0;
+    width: 93%;
+    max-width: 900px;
+}
+
+.title-contact{
+	text-align: center;
+	color: #FAAD00;
+	font-size: 40px;
+    padding: 20px 10px;
+    transition: 0.5s ease all;
+}
+
+.input-form{
+    font-size: 16px;
+    width: 82%;
+    padding: 10px;
+    border: none; /* Elimina el borde */
+    outline: none; /* Elimina el contorno al enfocar */
+    border: none;
+    background: transparent;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    display: block;
+    resize: none;
+    color: #ffffff;
+}
+
+.textarea{
+    height: 100px;
+    border: none; /* Elimina el borde de los textarea */
+    outline: none;
+}
+
+input[placeholder="Nombre"],
+input[placeholder="Teléfono"],
+input[placeholder="Correo electrónico"],
+input[placeholder="País"],
+input[placeholder="Ciudad"],
+textarea[placeholder="Tu mensaje"]{
+	border: none;
+    list-style: none;
+    text-decoration: none;
+    outline: 0;
+}
+
+.input-container{
+	margin-bottom: 10px;
+	border: 1px solid #aaa;
     display: flex;
-    flex-direction: column;
-    gap: 10px;
-    max-width: 500px;
-    margin: 0 auto;
+    align-items: center;
+}
+
+.icon{
+	min-width: 45px;
+	text-align: center;
+	color: #999;
+}
+
+.input-container span{
+    font-size: 25px;
+    color: #aaa;
+    margin-bottom: 3px;
+}
+
+.button{
+	border: none;
+	width: 100%;
+	color: #1a1a1a;
+	font-size: 16px;
+    font-weight: 700;
+    text-transform: uppercase;
+	background: #FAAD00;
+	padding: 15px 20px;
+	border-radius: 5px;
+	cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.button:hover{
+	background: #fae100;
+    transform: scale(1.01);
+}
+
+input[type="number"]::-webkit-inner-spin-button, 
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield; /* Para Firefox */
+    appearance: none; /* Para navegadores modernos */
 }
 
 input, textarea, button {
