--- a/styles.css
+++ b/styles.css
@@ -504,7 +504,7 @@ button:hover{
     border-radius: 8px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     width: 300px;
-    text-align: center;
+    text-align: justify;
     display: flex;
     flex-direction: column;
     align-items: center; /* Centra los íconos horizontalmente */
